--- a/shoppingbackend_prac/pom.xml
+++ b/shoppingbackend_prac/pom.xml
@@ -12,6 +12,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <spring.vesion>5.1.1.RELEASE</spring.vesion>
   </properties>
 
   <dependencies>
@@ -21,6 +22,12 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.vesion}</version>
+		</dependency>
   </dependencies>
   
   <build>
