--- a/onlineshopping_prac/pom.xml
+++ b/onlineshopping_prac/pom.xml
@@ -11,8 +11,8 @@
 
 	<properties>
 		<javaee.version>8.0</javaee.version>
-		<spring.vesion>5.1.1.RELEASE</spring.vesion>
-
+		
+		<spring.version>4.3.6.RELEASE</spring.version>
 	</properties>
 
 	<dependencies>
@@ -42,8 +42,21 @@
 
 		<dependency>
 			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>${spring.vesion}</version>
+			<version>${spring.version}</version>
 		</dependency>
 
 		<!-- jstl -->
